Configure Render and Netlify deployment settings

--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -1,7 +1,1 @@
-# Frontend .env Configuration
-
-# API Base URL - Update this to point to your Django backend
-VITE_API_BASE_URL=http://localhost:8000/api
-
-# Optional: Enable debug mode
-VITE_DEBUG=false
+VITE_API_BASE_URL=https://task-manager-1-tazf.onrender.com/api
