--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,8 +1,10 @@
 SECRET_KEY=your-secret-key-here
-DEBUG=True
+DEBUG=False
 DB_NAME=task_manager_db
 DB_USER=root
 DB_PASSWORD=your_password
 DB_HOST=localhost
 DB_PORT=3306
-ALLOWED_HOSTS=localhost,127.0.0.1
+ALLOWED_HOSTS=task-manager-1-tazf.onrender.com
+CORS_ALLOWED_ORIGINS=https://task77manager.netlify.app
+VITE_API_BASE_URL=https://task-manager-1-tazf.onrender.com/api
